log
Fri 12 May 2023 12:26:09 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
787574e
Fri 12 May 2023 12:27:58 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   22 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7debbd0
Fri 12 May 2023 12:28:38 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b62b258
Fri 12 May 2023 12:29:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d55d22f
Fri 12 May 2023 12:50:06 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
63e7561
Fri 12 May 2023 12:50:25 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
86d6bc3
Fri 12 May 2023 12:58:58 PM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
84faea0
Fri 12 May 2023 01:02:39 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
8ae5c69
Fri 12 May 2023 01:03:46 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
70f552e
Fri 12 May 2023 01:03:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
e4400c8
Fri 12 May 2023 01:08:50 PM UTC: 
 heap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
1ae76a1
Fri 12 May 2023 01:10:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
a72db4b
Fri 12 May 2023 01:11:36 PM UTC: 
 heap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 25/70
5c1a010
Fri 12 May 2023 01:11:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
5f0542b
Fri 12 May 2023 01:23:02 PM UTC: 
 heap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  4|2
total_score: 30/70
2201011
Fri 12 May 2023 01:23:49 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|2
total_score: 35/70
4b94e0f
Fri 12 May 2023 01:24:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
8125b81
